	-> bash/autorun
	-> bash/daemon/autorun
	-> bash/uninstall
	-> bash/expert/Executer
	-> bash/expert/kill_wineserver
	-> bash/install_wver
	-> bash/killall
	-> bash/polconfigurator (always used?)
	-> bash/system_info
	-> bash/check_maj
	-> bash/check_maj_
	-> lib/applications
	-> lib/check_depend
	-> lib/interface_v3
	-> lib/main
	-> lib/wine
	-> lib/interface (+ cleaning)
	-> playonlinux-cmd
- Removing some unused files plus cleaning some files. 
- Add missing string in tranlation. String used by plugins.
- ADD: Set_WineWindowTitle. See POL bug: #23.

-> 3.8.1
- UPDATE: Capture to 2.1.1.
- UPDATE: Translation update with launchpad on 2010-08-31 and 2010-09-02.
- UPDATE/FIX: function install_plugin rewrited to a more sure system.
- FIX: function POL_SW_auto_shortcut doesn't work properly with icons.
- FIX: bug #31.
- FIX: bug #30. Adding a sleep 0.2 for some functions.
- NEW: include template for translation.
- NEW: add playonlinux-cmd for manage POL by command line.
- NEW: playonlinux-cmd now support --update
- NEW: playonlinux-cmd now support --start-install

-> 3.8
- Bug #22 POL_SetupWindow_Init checks if a windows is already opened. --force option can be used to force windows opening in that case
- Ukranian name is .uk, not .ua
- New variable : $POL_USER_ROOT ( = $REPERTOIRE )
- Defaults plugins : Offline PlayOnLinux, Advanced wine configuration, Transgaming Cedega, Wine Import, Wine Look, Capture
- New functions : POL_GetImages, POL_SetupWindow_InitWithImages
- PlayOnLinux detects if you are alreay on a PlayOnLinux terminal, and if yes, it refuses to run
- A bug corrected in sources loading
- Wine Import and Offline PlayOnLinux plugin corrected
- playonlinux-shell command added to run PlayOnLinux shell in your terminal !
- PlayOnLinux uses a git repository for the developement
- Some cleaning
- The program does not show acceleration 3D message error when mesa-utils is not installed

-> 3.7.7
- Bug #4 corrected (wine version manager does not start)