@@ -22,6 +22,7 @@
 	-> lib/wine
 	-> lib/interface (+ cleaning)
 	-> playonlinux-cmd
+	-> python/mainwindow.py
 - Removing some unused files plus cleaning some files. 
 - Add missing string in tranlation. String used by plugins.
 - ADD: Set_WineWindowTitle. See POL bug: #23.
